manifests/keycloak/letsencrypt/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "keycloak.os4ml.wogra.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: keycloak-ingress-cert
      hosts:
        - "keycloak.os4ml.wogra.com"
